--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "bcrypt": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.31",
     "sails": "^1.2.5",
     "sails-hook-apianalytics": "^2.0.3",
     "sails-hook-organics": "^2.0.0",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^2.0.0",
     "sails-mysql": "^1.0.1",
-    "sails-postgresql": "^2.0.0"
+    "sails-postgresql": "^2.0.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "5.16.0",
