--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment-timezone": "^0.5.31",
     "sails": "^1.2.5",
     "sails-hook-apianalytics": "^2.0.3",
+    "sails-hook-email": "^0.12.1",
     "sails-hook-organics": "^2.0.0",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^2.0.0",
