--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "Buffer": "0.0.0",
     "bcrypt": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
@@ -20,6 +21,7 @@
     "sails-hook-sockets": "^2.0.0",
     "sails-mysql": "^1.0.1",
     "sails-postgresql": "^2.0.0",
+    "stream": "0.0.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
