Fix zoom authentication

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@sailshq/socket.io-redis": "^5.2.0",
     "Buffer": "0.0.0",
     "bcrypt": "^5.0.0",
+    "fetch": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
+    "node-fetch": "^2.6.1",
     "sails": "^1.2.5",
     "sails-hook-apianalytics": "^2.0.3",
     "sails-hook-email": "^0.12.1",
